prevent scroll on mobile

--- a/PercentageClock/styles/style.css
+++ b/PercentageClock/styles/style.css
@@ -82,17 +82,25 @@ body {
 }
 
 /* time effects */
-#moon {
+#sun, #moon {
     position: absolute;
-    z-index: 2;
+    z-index: 0;
     transform: translate(-50%, -50%);
-    background-color: rgb(240, 240, 240);
     border-radius: 50%;
+    transition: all 1.1s ease;
+    overflow: none;
+}
+
+#moon {
+    background-color: rgb(240, 240, 240);
     box-shadow: 0 0 20px rgba(240, 240, 240, 0.5);
     animation: moonAnimation 8s infinite;
-    transition: all 1.1s ease;
-    overflow-x: hidden;
-    overflow-y: hidden;
+}
+
+#sun {
+    background-color: rgb(255, 204, 0);
+    box-shadow: 0 0 50px rgba(255, 204, 0, 0.5);
+    animation: sunAnimation 8s infinite;
 }
 
 @keyframes moonAnimation {
@@ -109,18 +117,7 @@ body {
     }
 }
 
-#sun {
-    position: absolute;
-    z-index: 2;
-    transform: translate(-50%, -50%);
-    background-color: rgb(255, 204, 0);
-    border-radius: 50%;
-    box-shadow: 0 0 50px rgba(255, 204, 0, 0.5);
-    animation: sunAnimation 8s infinite;
-    transition: all 1.1s ease;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
+
 
 @keyframes sunAnimation {
     0%,
@@ -149,7 +146,6 @@ body {
     position: absolute;
     width: 100%;
     background-repeat: repeat-x;
-    z-index: 1;
 }
 
 .mountains {
@@ -168,12 +164,11 @@ body {
     top: 0;
     background: url('../images/stars.png');
     background-position: left top;
-
-    
     height: 65vh;
     animation: parallax 60s linear infinite;
     background-size: 100vh 65vh;
     opacity: 0.5;
+    z-index: 0;
 }
 
 #backMountains,
@@ -182,6 +177,7 @@ body {
     animation: parallax 45s linear infinite;
     background-size: 100vh 40vh;
     opacity: 0.25;
+    z-index: 1;
 }
 
 #frontMountains,
@@ -190,6 +186,7 @@ body {
     animation: offsetParallax 30s linear infinite;
     background-size: 100vh 35vh;
     opacity: 0.5;
+    z-index: 2;
 }
 
 #frontMountains {
